--- a/.env.template
+++ b/.env.template
@@ -4,6 +4,9 @@
 # OpenAI API Key
 OPENAI_API_KEY=your_openai_api_key_here
 
+# OpenAI Moderation API Key (optional, defaults to using OPENAI_API_KEY)
+OPENAI_MODERATION_API_KEY=your_moderation_api_key_here
+
 # Ticketmaster API Key
 TICKETMASTER_API_KEY=your_ticketmaster_api_key_here
 
